--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--Proyecto realizado por Brandon Stuart Maldonado Alvarez-->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Pokedex API</title>
+    <link rel="icon" href="src/assets/icono.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
