--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!--Proyecto realizado por Brandon Stuart Maldonado Alvarez-->
+    <!--"Npm run dev" para correr la APP-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex API</title>
